--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -11,3 +11,6 @@ $base-font-family: "Roboto", sans-serif !default;
 @import "basically-basic/themes/{{ site.data.theme.skin | default: 'default' }}";
 
 @import "basically-basic";
+
+//Favicon
+<link rel="shortcut icon" type="image/png" href="favicon.ico">
