--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -13,4 +13,4 @@ $base-font-family: "Roboto", sans-serif !default;
 @import "basically-basic";
 
 //Favicon
-<link rel="shortcut icon" type="image/png" href="favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/images/favicon.ico" >
