--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,5 +34,5 @@
   {% endif %}
 
   <!-- Favicon head tag -->
-  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/images/favicon.ico">
 </head>
