--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,5 +34,5 @@
   {% endif %}
 
   <!-- Favicon head tag -->
-  <link rel="shortcut icon" type="image/icon" href="/assets/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico">
 </head>
